--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "jinrishici": "^1.0.6",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
@@ -20,6 +21,8 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.2",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "naive-ui": "^2.35.0",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.2",
