--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "default-passive-events": "^2.0.0",
     "jinrishici": "^1.0.6",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
